k8sdeployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synth-backend
  namespace: syntera-mvp
  labels:
    app: synth-backend
spec:
  replicas: 4
  progressDeadlineSeconds: 1800
  selector:
    matchLabels:
      app: synth-backend
  template:
    metadata:
      labels:
        app: synth-backend
    spec:
      serviceAccountName: ssm-reader

      # Run migrations before app starts
      containers:
        - name: backend
          image: 175337843263.dkr.ecr.ap-south-1.amazonaws.com/synth-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          args:
            - uvicorn
            - app.main:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
            - --proxy-headers
            - --forwarded-allow-ips=*
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 3Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
