k8sdeployment/front-end-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synth-frontend
  namespace: syntera-mvp
  labels:
    app: synth-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: synth-frontend
  template:
    metadata:
      labels:
        app: synth-frontend
    spec:
      containers:
        - name: frontend
          image: 175337843263.dkr.ecr.ap-south-1.amazonaws.com/synth-frontend:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
         
          # optional health checks
          readinessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 15
            periodSeconds: 20
