k8sdeployment/front-end-service.yml
apiVersion: v1
kind: Service
metadata:
  name: synth-frontend-production-svc
  namespace: syntera-prod

spec:
  selector:
    app: synth-frontend-production

  ports:
    - name: http
      port: 80
      targetPort: 5173

  type: ClusterIP
