k8sdeployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: synth-backend-production-svc
  namespace: syntera-prod

spec:
  selector:
    app: synth-backend-production

  ports:
    - name: http
      port: 80
      targetPort: 8000

  type: ClusterIP
