k8sdeployment/front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syntera-front-mvp-ingress
  namespace: syntera-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: platform.synthetic-people.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synth-frontend-svc
                port:
                  number: 80
