k8sdeployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: syntera-prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:175337843263:certificate/bcfa9771-8942-406e-9129-62d9db6c2aa3
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: platform.synthetic-people.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synth-frontend-production-svc
                port:
                  number: 80
    - host: platfrom.api.synthetic-people.ai
      http:
        paths:
          - path: /auth/login
            pathType: Prefix
            backend:
              service:
                name: synth-backend-production-svc
                port:
                  number: 8000
          - path: /workspaces
            pathType: Prefix
            backend:
              service:
                name: synth-backend-production-svc
                port:
                  number: 8000
          - path: /personas
            pathType: Prefix
            backend:
              service:
                name: synth-backend-production-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synth-backend-production-svc
                port:
                  number: 8000
